--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ndfi-track",
+  "name": "credit-jambo-savings-management-admin",
   "version": "1.0.0",
   "description": "NDFI TRACK - A comprehensive financial management platform",
   "scripts": {
