--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,21 @@
-VITE_API_URL=
-# Idle timeout in minutes for admin UI (default 15 if unset)
+# Credit Jambo Savings Management - Admin Frontend
+# Environment Variables Configuration
+
+# API Base URL
+# Backend API endpoint
+VITE_API_BASE_URL=http://localhost:4000/api
+
+# For production:
+# VITE_API_BASE_URL=https://api.creditjambo.com/api
+
+# Idle Timeout (minutes)
+# Session inactivity timeout in minutes (default: 15)
 VITE_IDLE_TIMEOUT_MINUTES=15
+
+# Environment
+NODE_ENV=development
+
+# Notes:
+# 1. All variables must be prefixed with VITE_ to be accessible in the app
+# 2. Update VITE_API_BASE_URL to match your backend server URL
+# 3. After changing .env, restart the dev server
