--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,59 +1,18 @@
-# Dependencies
 node_modules
-npm-debug.log
-
-# Testing
-coverage
-.nyc_output
-
-# IDE
-.vscode
-.idea
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Environment
 .env
 .env.local
-.env.*.local
-
-# Logs
-logs
-*.log
-
-# Backups
-backups/*.gz
-backups/*.sql
-
-# Uploads (will be mounted as volume)
-uploads/*
-!uploads/.gitkeep
-
-# Git
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+*.pem
 .git
 .gitignore
-
-# Documentation
-*.md
-!README.md
-
-# Scripts (keep essential ones)
-scripts/*.sh
-
-# Test files
-test
-tests
-__tests__
-*.test.js
-*.spec.js
-
-# Temporary files
-tmp
-temp
-.cache
-
+coverage
+.nyc_output
+logs/*
+!logs/.gitkeep
+uploads/*
+!uploads/.gitkeep
+backups/*
+!backups/.gitkeep
