--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,10 @@
     "monitor": "node scripts/monitorSystem.js",
     "health-check": "node scripts/checkSystemHealth.js",
     "setup-coa": "node scripts/setup-default-coa-for-client.js",
-    "client-db": "node scripts/manage-client-databases.js"
+    "client-db": "node scripts/manage-client-databases.js",
+    "test": "NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -51,6 +54,9 @@
     "xss": "^1.0.14"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@jest/globals": "^29.7.0"
   }
 }
