--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,60 +1,18 @@
-# Dependencies
 node_modules
-npm-debug.log
-
-# Build output (will be created during build)
-dist
-build
-
-# Testing
-coverage
-.nyc_output
-__tests__
-*.test.js
-*.test.jsx
-*.spec.js
-*.spec.jsx
-
-# IDE
-.vscode
-.idea
-*.swp
-*.swo
-*~
-.eslintcache
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Environment
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Logs
-logs
-*.log
-
-# Git
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+*.pem
 .git
 .gitignore
-
-# Documentation
-*.md
-!README.md
-
-# Config files (keep essential ones)
-.prettierrc
-.editorconfig
-
-# Temporary files
-tmp
-temp
-.cache
-
-# Vite
-vite.config.js.timestamp-*
-
+coverage
+.nyc_output
+dist
+build
+.vite
